welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:50: error: not found: value Direction
  if (getDirection()==Direction.EST){
                      ^